app: fix top-nav drift in position:fixed on iOS

--- a/app/web_modules/sourcegraph/app/styles/GlobalNav.css
+++ b/app/web_modules/sourcegraph/app/styles/GlobalNav.css
@@ -16,6 +16,7 @@
 	composes: bb from base;
 	border-color: #efefef;
 	background-color: #fafafa;
+	z-index: 100;
 
 	height: navbarHeight;
 	position: fixed;
